scrollbar fixed

--- a/frontend/express/public/stylesheets/styles/blocks/_sidebar.scss
+++ b/frontend/express/public/stylesheets/styles/blocks/_sidebar.scss
@@ -209,18 +209,6 @@ $bg-color: #24292e;
     &__main-menu {
         overflow: auto;
         height: calc(100% - 82px);
-        ::-webkit-scrollbar-track {
-	       -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-	        background-color: #F5F5F5;
-        }
-        ::-webkit-scrollbar {
-	        width: 6px;
-	        background-color: #F5F5F5;
-        }
-
-        ::-webkit-scrollbar-thumb {
-	        background-color: #000000;
-        }
     }
 
     &__app-image {
